# octorules-azure

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml
docs/: lint.md
examples/: config.yaml
examples/rules/: my-waf-policy.yaml
octorules_azure/: __init__.py  _adapters.py  _managed_exclusions.py  _phases.py  _policy_settings.py  audit.py  provider.py  validate.py
octorules_azure/linter/: __init__.py  _plugin.py  _rules.py
scripts/hooks/: pre-commit
tests/: conftest.py  test_adapters.py  test_audit.py  test_cli_lint.py  test_context.py  test_managed_exclusions.py  test_managed_rules.py  test_policy_settings.py  test_provider.py  test_registration.py  test_validate.py
tests/test_linter/: conftest.py  test_plugin.py
